syntax = "proto3";
package Messaging;
option go_package = "./Messaging";

message DirectMessage {
  int32 msgType = 1;
  string senderID = 2;
  int64 sentTime = 3;
  string body = 4;
  repeated string attachments = 5;
  repeated string recipientIDs = 6;
}

message DirectMessageResponse {
  int32 errorCode = 1;
  string errorMsg = 2;
  repeated string successfulDeliveryIDs = 3;
}

service DirectMessageService {
  rpc DirectMessageUser(DirectMessage) returns (DirectMessageResponse){}
}